tests/errors/surf_cont_08.experr
index: value not in List
